--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "source": "Your domain name here. Ex: mysite.tld",
   "target": "The website you want to proxy. Ex : http://en.rsf.org",
-  "port": 3000
+  "port": 3000,
+  "log_path": "app.log"
 }
