--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "http-server": "^0.8.5",
     "iconv-lite": "^0.4.13",
     "lodash": "^4.3.0",
+    "morgan": "^1.7.0",
     "multipipe": "^0.3.0",
     "replacestream": "^4.0.0",
-    "require-dir": "^0.3.0",
-    "winston": "^2.2.0"
+    "require-dir": "^0.3.0"
   }
 }
