Add hostnames_to_replace to config.json

--- a/config.json
+++ b/config.json
@@ -2,5 +2,8 @@
   "source": "Your domain name here. Ex: mysite.tld",
   "target": "The website you want to proxy. Ex : http://en.rsf.org",
   "port": 3000,
-  "log_path": "app.log"
+  "log_path": "app.log",
+  "hostnames_to_replace": {
+    "mysite1.tld": "en.rsf.org"
+  }
 }
