--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,13 +22,14 @@
     "charset": "^1.0.0",
     "connect": "^3.4.1",
     "http-proxy": "^1.13.1",
-    "http-server": "^0.8.5",
     "iconv-lite": "^0.4.13",
-    "lodash": "^4.3.0",
     "morgan": "^1.7.0",
     "multipipe": "^0.3.0",
     "replacestream": "^4.0.0",
     "require-dir": "^0.3.0",
     "through": "^2.3.8"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
