--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ build/Release
 # Dependency directory
 node_modules
 
+#node dir installed by install.sh
+node
+
 # Optional npm cache directory
 .npm
 
